# C-_opencv

./: .gitignore  CMakeLists.txt  README.md  helloworld.cpp
include/: 1.h
src/: 1.cpp  main.cpp
